# ZeroKnowledgeSoK

./: .gitignore  README.md
MPC-in-the-head/: README.md
MPC-in-the-head/emp/: CMakeLists.txt  Dockerfile  Dockerfile2  README.md  docker-compose.yml
MPC-in-the-head/emp/rosetta-env/: .gitignore  Dockerfile  Dockerfile2  README.md  docker-compose-plain-predict.yaml  docker-compose-train.yaml  docker-compose-zk-predict.yaml
MPC-in-the-head/emp/src/: hash.cpp  matrix_mul.cpp  merkle_tree.cpp  relu.cpp
MPC-in-the-head/lib-iop/: Dockerfile  README.md  out.txt  test_matmul_snark.cpp
MPC-in-the-head/lib-iop/fixes/: CMakeLists.txt  utils.cpp  utils.hpp
MPC-in-the-head/limbo/: Dockerfile  README.md  limbo_instances.cpp  matmul64.txt
MPC-in-the-head/mozzarella/: Dockerfile  README.md  docker-compose.yml
MPC-in-the-head/orion/: Dockerfile  README.md
MPC-in-the-head/zkboo/: Dockerfile  README.md  _compile_zkbpp.sh
PLONK/: README.md
PLONK/barretenberg/: Dockerfile  README.md
PLONK/bellman/: Dockerfile  README.md
PLONK/dusk-plonk/: Dockerfile  README.md
PLONK/halo2/: Cargo.toml  Dockerfile  README.md  matmul.rs  matmul2.rs  sha256.rs
PLONK/halo2/ezkl/: Dockerfile
PLONK/noir/: .gitignore  Dockerfile  README.md  gen_inputs.py  input.txt  run.sh
PLONK/noir/matmult/: Prover.toml  run.py
r1csReader/: Dockerfile  README.md  out.txt  read.js
zkCircuits/: README.md
zkCircuits/circom/: .gitignore  Dockerfile  README.md  run_matmul.sh  run_sha256.sh
zkCircuits/circom/matmul/: gen_inputs.py
zkCircuits/emp-bristol/: CMakeLists.txt  Dockerfile  README.md  genCircuits.cpp  run.sh
zkCircuits/emp-bristol/circuits/: count.py  matmul64.txt  matmul_file.h
zkCircuits/zokrates/: Dockerfile  README.md  run.sh
zkCircuits/zokrates/src/: matmult.zok  sha256.zok
zkSNARKs/: README.md
zkSNARKs/arkworks/: Dockerfile  README.md
zkSNARKs/arkworks/matmul/: Cargo.toml
zkSNARKs/arkworks/matmul/src/: main.rs
zkSNARKs/arkworks/merkle-tree/: Cargo.toml
zkSNARKs/arkworks/test_hash/: Cargo.toml
zkSNARKs/arkworks/test_hash/src/: demo_pedersen.rs  demo_poseidon.rs  demo_sha256.rs  main.rs
zkSNARKs/gnark/: .gitignore  Dockerfile  README.md  go.mod  go.sum
zkSNARKs/gnark/hash/: main.go  (+4 more)
zkSNARKs/hyrax/: Dockerfile  README.md
zkSNARKs/legosnark/: Dockerfile  README.md  sha256.cc
zkSNARKs/libsnark/: Dockerfile  README.md  rundocker.sh
zkSNARKs/mirage/: Dockerfile  README.md  SHA256Demo.java
zkSNARKs/plonky2/: Dockerfile  README.md
zkSNARKs/pysnark/: Dockerfile  README.md  matmult.py  sha256.py
zkSNARKs/rapidsnark/: Dockerfile  README.md  input.txt
zkSNARKs/snarkjs/: Dockerfile  README.md  run.sh
zkSNARKs/spartan/: Dockerfile  README.md
zkSTARKs/: README.md
zkSTARKs/midenVM/: Dockerfile  README.md
zkSTARKs/risc0/: Dockerfile  README.md
zkSTARKs/starky/: Dockerfile  README.md
zkSTARKs/zilch/: Dockerfile  README.md
(+66 files in other folders)
