[package]
name = "ark-learn-hash"
version = "0.3.0"
edition = "2018"

[dependencies]
ark-crypto-primitives = { version = "^0.4.0", default-features = true, features = [ "r1cs", "crh" ] }
ark-bls12-377 = { version = "^0.4.0", default-features = false, features = [ "curve", "r1cs" ] }
ark-ed-on-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "r1cs" ] }
ark-std = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false  }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
